kubernetes/apps/home/mealie/service-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie-tailscale
  namespace: home
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/name: mealie
  ports:
    - port: 9000
      targetPort: 9000
