kubernetes/apps/home/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: home
  annotations:
    tailscale.com/proxy-group: homelab
    external-dns.alpha.kubernetes.io/hostname: mealie.tituslab.dev
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie
                port:
                  number: 9000
  tls:
    - hosts:
        - mealie
